--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Runner | Welcome</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>App works</h1>
-    <script src="js/main.min.js" defer></script>
+    <div class="wrapper">
+        <canvas width="918" height="814">
+            Your browser does not support the HTML5 canvas tag.
+        </canvas>
+    </div>
+    <script src="js/main.js" defer></script>
 </body>
+
 </html>
