JR-9 #gameplay created, now it's a real game

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,16 @@
 
 <body>
     <div class="wrapper">
-        <canvas width="918" height="814">
+        <canvas width="918" height="814" tabindex="0">
             Your browser does not support the HTML5 canvas tag.
         </canvas>
+        <div id="gameOverModal">
+            <span>Game over!</span>
+            <div class="d_fl a_c j_sb">
+                <button class="btn" id="goHomeBtn">Go home</button>
+                <button class="btn" id="tryAgainBtn">Try again</button>
+            </div>
+        </div>
     </div>
     <script src="js/main.js" defer></script>
 </body>
