--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
     <title>Runner | Welcome</title>
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,13 +14,14 @@
         <canvas width="918" height="814" tabindex="0">
             Your browser does not support the HTML5 canvas tag.
         </canvas>
-        <div id="gameOverModal">
+        <div id="gameDialogModal">
             <span>Game over!</span>
             <div class="d_fl a_c j_sb">
                 <button class="btn" id="goHomeBtn">Go home</button>
-                <button class="btn" id="tryAgainBtn">Try again</button>
+                <button class="btn" id="actionBtn">Try again</button>
             </div>
         </div>
+        <button id="pauseBtn" title="Pause"></button>
     </div>
     <script src="js/main.js" defer></script>
 </body>
