JR-11 #feat: add sounds to the game

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,8 @@
                 <button class="btn" id="actionBtn">Try again</button>
             </div>
         </div>
-        <button id="pauseBtn" title="Pause"></button>
+        <button id="pauseBtn" class="control_btn" title="Pause"></button>
+        <button id="audioBtn" class="control_btn" title="Audio"></button>
     </div>
     <script src="js/main.js" defer></script>
 </body>
